--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Lasagna</h1>
-    <img src="../images/lasagna.webp" alt="lasagna">
+    <h1>LASAGNA</h1>
+    <center><img src="../images/lasagna.webp" alt="lasagna"></center>
 
     <h2>Descriptions</h2>
     
-    <p>this is the recipes to make Lasagna</p>
-    <p>If you don't understand, it is ok</p>
+    <div class="recipe">
+
+    <p>this is the recipes to make Lasagna. If you don't understand, it is ok</p>
 
     <h3>Ingredients</h3>
     <ul>
@@ -31,5 +33,7 @@
         <li>put into microwave</li>
         <li>enjoy</li>
     </ol>
+
+    </div>
 </body>
 </html>
